# systematic-equity-engine

./: .gitattributes  .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config_paper.yaml  config_prod.yaml
docs/: architecture.md  strategy.md
src/backtesting/: engine.py
src/features/: engineering.py
src/models/: estimators.py  walk_forward.py
src/portfolio/: construction.py
src/risk/: beta.py  limits.py
src/utils/: artifacts.py  config.py  metrics.py  monitor.py  types.py
tests/: test_backtesting.py  test_data.py  test_features.py  test_metrics.py  test_portfolio.py  test_risk.py
